add message and usage

--- a/api_life/src/main/resources/application.properties
+++ b/api_life/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/test_application
+#spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.uri=mongodb+srv://userapi:123654@cluster0.34wl9.mongodb.net/data_api?retryWrites=true&w=majority
+#spring.data.mongodb.uri=mongodb://localhost:27017/test_application
 #spring.data.mongodb.uri=mongodb://michelli:banco123@ds257564.mlab.com:57564/apirestwebflux
